# gridpulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Caddyfile.prod  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts.yml  mart_best_slots_24h.sql  mart_generation_mix_long.sql  mart_half_hourly.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_agile_price.sql  stg_carbon_intensity.sql  stg_generation_mix.sql
docs/: PROJECT_BRIEF.md  api-design.md  architecture.md  data-contracts.md  database-design.md  decisions-log.md  infra-design.md  lakehouse-design.md  launch-posts.md
docs/runbooks/: restore.md
gridpulse/: __init__.py
gridpulse/api/: __init__.py  cache.py  main.py  queries.py  schemas.py
gridpulse/api/routes/: html.py  json_api.py
gridpulse/api/templates/: 404.html  500.html  base.html  landing.html  region.html  status.html
gridpulse/api/templates/partials/: best_slots.html  carbon_trend.html  current_conditions.html  generation_donut.html
gridpulse/contracts/: __init__.py  carbon_intensity.py  neso.py  octopus.py
gridpulse/dagster_defs/: __init__.py  assets.py  backup_assets.py  dbt_assets.py  iceberg_assets.py
gridpulse/ingestion/: __init__.py  carbon_intensity.py  http.py  neso.py  octopus.py
gridpulse/lib/: __init__.py  heartbeat.py  observability.py  regions.py
gridpulse/storage/: __init__.py  iceberg.py  iceberg_schemas.py  migrate.py  postgres.py
gridpulse/storage/migrations/: 001_extensions_and_schemas.sql  002_ref_dno_region.sql  003_seed_dno_region.sql  004_raw_carbon_intensity.sql  005_raw_generation_mix.sql  006_raw_agile_price.sql  README.md
observability/: agent.yaml  alerts.json  dashboard.json
scripts/: backfill_carbon_intensity.py  deploy_observability.sh  init_iceberg_tables.py  load_test.sh  query_lake.py  restore_drill.sh  set_r2_lifecycle.sh
terraform/: .terraform.lock.hcl  README.md  cloud-init.yml.tpl  cloudflare.tf  hetzner.tf  main.tf  outputs.tf  post-deploy.sh  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/fixtures/carbon_intensity/: intensity_current.json  regional_current.json
tests/fixtures/neso/: generation_mix_latest.json
tests/fixtures/octopus/: london_4.json  london_latest.json
tests/integration/: test_carbon_intensity_pipeline.py
tests/unit/: test_contract_carbon_intensity.py  test_contract_neso.py  test_contract_octopus.py  test_dst_invariants.py  test_iceberg_schemas.py  test_ingestion_carbon_intensity.py  test_ingestion_http.py  test_ingestion_neso_octopus.py  test_lib_heartbeat.py  test_smoke.py
