[project]
name = "gridpulse"
version = "0.1.0"
description = "Real-time UK energy intelligence platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nasrullah Olajide" }]

# Core deps — used by ingestion, API, and CLI alike.
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "psycopg[binary,pool]>=3.2",
    "python-dateutil>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "cachetools>=5.4",
    "slowapi>=0.1.9",
    "sentry-sdk>=2.13",
    "structlog>=24.4",
]

[dependency-groups]
# Heavy data-engineering deps. Installed on the box; not always on a dev laptop.
ingestion = [
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "dagster-postgres>=0.24",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "pyiceberg[s3fs,sql-postgres,pyarrow]>=0.7",
    "duckdb>=1.0",
    "pyarrow>=17.0",
]

# Dev-only — never installed in prod images.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.32",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-cachetools",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gridpulse"]

# ---------------------------------------------------------------------------
# Tooling config — kept in pyproject.toml so there's one source of truth.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# A pragmatic ruleset: pyflakes (F), pycodestyle (E/W), isort (I),
# bugbear (B), comprehensions (C4), pyupgrade (UP), simplify (SIM).
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B011"]  # asserts in tests are fine
# FastAPI's idiomatic pattern uses `Query()`/`Depends()` in argument defaults;
# B008 ("Do not perform function call in argument defaults") fights it.
"gridpulse/api/routes/**/*" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
# We don't type-check tests strictly — fixtures often duck-type.
exclude = ["tests/"]

[[tool.mypy.overrides]]
# Third-party libs without type stubs — quiet them rather than spam errors.
module = [
    "dagster.*",
    "pyiceberg.*",
    "duckdb.*",
    "dbt.*",
    "slowapi.*",
    "psycopg_pool.*",
]
ignore_missing_imports = true
follow_imports = "skip"        # don't walk into them — strict-mypy is otherwise slow

[[tool.mypy.overrides]]
# Dagster glue code: trust Dagster's runtime, skip strict-typing the integration shims.
# Dagster types are Any (via follow_imports="skip" above) so generic forms
# like `MaterializeResult`, `AssetSelection`, `define_asset_job(...)` etc.
# can't carry useful param info anyway.
module = "gridpulse.dagster_defs.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: tests that hit a real Postgres (skipped by default in pre-commit)",
]
